tests/js_error/source_locations/expression/update/member_to_numeric.js
var obj = {
  a: Symbol('a'),
};

obj.a++;